@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="dataLoadingManager" class="edu.mcw.rgd.dataload.DataLoadingManager">
-        <property name="version" value="Ncbi Gene Pipeline   -- build May 22, 2023" />
+        <property name="version" value="Ncbi Gene Pipeline   -- build Jul 24, 2023" />
 		<property name="qualityCheck" ref="qualityCheck"/>
 	    <property name="decisionMaker" ref="decisionMaker"/>
 	    <property name="entrezGeneExtractor" ref="entrezGeneExtractor"/>
@@ -35,10 +35,11 @@
         <!--gene location history: gene location info provided by RefSeq for non-current (previous) assemblies -->
         <property name="geneLocationHistory">
             <map>
+                <!--
                 <entry key="Rn_Celera" value="15"/>
                 <entry key="Rnor_5.0" value="70"/>
                 <entry key="Rnor_6.0" value="360"/>
-
+                -->
                 <entry key="Hs_Celera" value="16"/>
                 <entry key="CHM1_1.0" value="36"/>
                 <entry key="CHM1_1.1" value="36"/>
@@ -155,6 +156,7 @@
     <bean id="ratGenomicAssemblies" class="java.util.HashMap">
         <constructor-arg>
             <map>
+                <!--
                 <entry key="Alternate assembly (based on Celera assembly)" value="15"/>
                 <entry key="Alternate assembly (Rn_Celera)" value="15"/>
                 <entry key="Alternate Rn_Celera" value="15"/>
@@ -162,6 +164,7 @@
                 <entry key="Reference assembly (based on RGSC_v3.4)" value="60"/>
                 <entry key="Reference Rnor_5.0 Primary Assembly" value="70" />
                 <entry key="Reference Rnor_6.0 Primary Assembly" value="360" />
+                -->
                 <entry key="Reference mRatBN7.2 Primary Assembly" value="372"/>
                 <entry key="Cytomap" value="99"/>
             </map>
